--- a/content/decode-the-world/2025-11-15.md
+++ b/content/decode-the-world/2025-11-15.md
@@ -100,6 +100,6 @@ date: 2025-11-15
 <nav class="pagination justify-content-between">
 <a href="../2025-11-10">鸦船</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-11-17">无处排水</a>
 </nav>
 
