add second edition

--- a/content/decode-the-world/2025-11-17.md
+++ b/content/decode-the-world/2025-11-17.md
@@ -36,10 +36,65 @@ date: 2025-11-17
 
 却还在认真地洗东西。
 
+## 第二版：《梦境三章》
+
+### 第一章：告白
+
+她坐在我身后，突然说：“我喜欢你。”  
+
+我一怔，猛地掰过她的脸，双手揉捏那瘦长的脸颊，直到轮廓在我掌中变形。“我把你当哥们！”我说，声音发紧，“看看你在想什么？”  
+
+她没躲，只是眯起大眼睛，瞳孔里晃着我的影子，像两潭被风吹皱的水。  
+
+就在这时，她养的两匹马从林子里冲出，背上竟驮着两个婴儿——不知怎么绑的，襁褓缠在马鞍上，小脸红扑扑的。马蹄翻飞，转眼消失在坡道尽头。  
+
+我们追出去，肺里烧着火。  
+
+### 第二章：追马
+
+跑了不知多久，马终于停下，在一片软草甸上踱步。一个婴儿被轻轻放在苔藓上，睡得安稳。  
+
+“怎么只有一个？”我喘着问。  
+
+她蹲下身，手指抚过婴儿的额发，忽然抬头看马。  
+那马也望着她，鼻孔翕动，眼神竟像在回想。片刻后，它转身往回走，蹄声笃定。  
+
+我们跟着它，穿过灌木与溪流，回到半路一棵老槐树下——另一个婴儿正躺在落叶堆里，睁着眼，不哭不闹，仿佛知道我们会回来。  
+
+她抱起他，轻声说：“马记得。”  
+
+我点点头，没说话。
+
+原来有些东西，连野性都懂得守护。  
+
+### 第三章：排水 
+
+后来我们进了厨房。  
+
+地面铺着一层薄薄的草木灰，像是刚烧完什么，余温尚存。我接了水洗碗，洗完把盆倾斜，让水流进灰里，积成一个小水坑，映着窗外的天光。  
+
+她突然一拳打在我肩上：“你怎么把水往地上倒？”  
+
+“那倒哪儿？”我反问。  
+
+我们环顾四周：没有水槽，没有地漏，连根排水管都没有。只有四壁沉默，和脚下这层灰。  
+
+忽然，她笑了。我也笑了。  
+
+笑声在空厨房里撞来撞去，越笑越大声，笑到眼角发酸。
+
+原来我们一直活在一个**没有下水系统的世界里**，却还在认真地洗东西，认真地喜欢，认真地追回丢失的婴儿。  
+
+笑够了，她蹲下，用手在灰里划了个圈，把水坑围住。
+
+“这样，”她说，“它就不会干得太快。”  
+
+我没回答，只是站在她旁边，看那圈灰里的水，慢慢映出两个人的影子。
+
 
 <nav class="pagination justify-content-between">
 <a href="../2025-11-15">窝与翼</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-11-18">它不想被打开</a>
 </nav>
 
