feat(content): 更新小说内容并优化叙事结构
重构了文章标题与段落结构，增强故事连贯性与情感表达。新增多个场景描
述，深化角色内心独白，使情节更具张力。调整叙述节奏，提升读者沉浸感。

--- a/content/decode-the-world/2025-11-19.md
+++ b/content/decode-the-world/2025-11-19.md
@@ -1,20 +1,124 @@
 ---
-title: "太太消失了"
+title: "起初我没在意"
 summary: ""
 date: 2025-11-19
 ---
 
-这一段构不成一篇完整的小说，这是梦中闪过的一堆混乱画面，只能记得这段开头，醒来后的意识想要续上，想了很久无法还原梦中的感觉，这篇小说就只保留这四句吧。
+太太已经消失了几天。
+
+起初我没有在意，直到同事在茶水间问：“嫂子最近还好吗？”  
+
+我愣了一下，才想起该联系她。
+
+拨号，无人接听；发消息，对话框上方不再显示“对方正在输入”。她的社交账号停在上周三，最后一条是张阳台照片：晾衣绳上挂着两件衬衫，风吹得鼓起来，像一对准备起飞的翅膀。而我当时在回一封关于服务器迁移的邮件，没抬头。  
+
+这几天，生活照常运转。
+
+早上七点，咖啡机自动启动，我仍放两只杯子——她的那只蓝釉杯沿有道细裂，是去年搬家时磕的，她舍不得换。
+
+冰箱里的牛奶快过期了，我喝掉一半，另一半照例倒进她常喝的燕麦碗里，又觉得不对，默默倒回瓶中。
+
+晚上回家，玄关灯感应到脚步自动亮起，我下意识说“我回来了”，声音撞在空墙上，自己都觉得多余。  
+
+昨夜系统推送家庭云相册的月度摘要：“检测到成员‘Lin’近期无新内容，是否归档？”
+
+我点了“稍后处理”。  
+
+今早出门前，发现洗衣机滚筒里还留着她一件白T恤，洗好了，没晾。
+
+我把它拿出来，挂在阳台上，像往常那样。
+
+然后关门，下楼，走进地铁站的人流里。  
+
+直到此刻坐在工位上，盯着屏幕上跳动的服务器状态——一切正常，绿色图标整齐排列，数据流稳定——我才突然意识到：
+
+她可能再也不会回来取那件衣服了。
+
+而我的生活，竟在她缺席的情况下，完美运行了五天零七小时。
 
 ---
 
-太太已经消失了几天。  
+我开始整理她的东西，不是因为悲伤，而是因为云盘快满了。  
 
-起初我没有在意，直到有人问起。  
+她的文件夹结构清晰得近乎冷酷：
 
-我尝试联系，联系不上。  
+```
+/生活/账单/2024  
+/工作/项目/终稿_勿动
+/照片/家庭/备份_自动
+```
 
-这才意识到出了问题。
+还有一个单独的目录，命名为：`/如果我不在`。  
+
+我点开它，心跳慢了半拍。  
+
+里面只有三个文件：
+
+- `README.txt`  
+- `紧急联系人.xlsx`  
+- `致你.mov`  
+
+我先看了 Excel。
+
+列着父母、我的名字、物业电话、保险公司，甚至宠物医院——但我们没有养宠物。她大概是从某个模板里复制过来的，忘了删。  
+
+README 是纯文本，黑底白字，像一段遗留在终端里的指令：  
+
+> 如果你看到这个文件，说明我已经连续72小时未登录任何共享设备。
+>
+> 不必找我。
+>
+> 我只是需要一点空间。
+>
+> 咖啡机定时别关，蓝杯子放在左边。
+>
+> 衣柜第三格有件灰色毛衣，天凉时记得穿。  
+>
+> ——Lin  
+
+我盯着屏幕，手指悬在触控板上，不敢点开那个 `.mov` 文件。  
+
+那天晚上，我没开灯，坐在客厅沙发上，听冰箱压缩机嗡嗡启动。
+
+突然想起，上周三凌晨两点，我被键盘声吵醒。
+
+她背对着我，在书房打字，屏幕光映在侧脸上，像一层薄霜。
+
+我问：“怎么还不睡？”
+
+她说：“存个东西。”
+
+我没再问。  
+
+现在我知道，她存的是告别。  
+
+第二天，我点了播放。  
+
+视频很短，只有17秒。
+
+她坐在阳台上，背后是晾衣绳和那两件鼓起的衬衫。阳光太强，她眯着眼，嘴角有一点笑，又像没有。  
+
+> “如果你看到这个……”她顿了顿，风吹乱了头发，“ 
+>
+> 其实我一直在练习消失。
+>
+> 从少说一句话开始，到少回一条消息，再到……
+>
+> 把自己从你的日常里一点点抽走。
+>
+> 这样，等我真的走了，你就不会太疼。”  
+
+视频结束。黑屏。  
+
+我关掉电脑，走到厨房，把蓝杯子放进消毒柜。
+
+然后打开咖啡机，只放了一只杯子。  
+
+水烧开的声音响起时，我忽然明白：
+
+她不是突然消失的。
+
+她是慢慢把自己删除的——而我，全程点了“允许”。
 
 ---
 
