--- a/content/decode-the-world/2025-11-18.md
+++ b/content/decode-the-world/2025-11-18.md
@@ -92,6 +92,6 @@ date: 2025-11-18
 <nav class="pagination justify-content-between">
 <a href="../2025-11-17">无处排水</a>
 <a href="../">目录</a>
-<a href="../2025-11-19">太太消失了</a>
+<a href="../2025-11-19">起初我没在意</a>
 </nav>
 
