perplexity and geometric mean

--- a/content/engineering-wisdom/2025-11-08.md
+++ b/content/engineering-wisdom/2025-11-08.md
@@ -191,6 +191,6 @@ markdown = change_image_url(markdown, rename_callback)
 <nav class="pagination justify-content-between">
 <span></span>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-12-11">为什么困惑度要用 N 次方根？——《Speech and Language Processing》第三章阅读笔记</a>
 </nav>
 
