update novel title with category

--- a/content/decode-the-world/2025-09-30.md
+++ b/content/decode-the-world/2025-09-30.md
@@ -57,8 +57,8 @@ I’m not done yet.
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-06-07">2025年，还该选计算机专业吗？一位过来人的冷静建议</a>
+<a href="../2025-06-07">【观点】2025年，还该选计算机专业吗？一位过来人的冷静建议</a>
 <a href="../">目录</a>
-<a href="../2025-11-01">秦制之殇</a>
+<a href="../2025-11-01">【观点】秦制之殇</a>
 </nav>
 
