--- a/content/decode-the-world/2025-11-05.md
+++ b/content/decode-the-world/2025-11-05.md
@@ -1,12 +1,12 @@
 ---
-title: "输液伞"
+title: "【小说】输液伞"
 summary: ""
 date: 2025-11-05T22:55:00+08:00
 ---
 
 没有人记得病是从什么时候开始的。
 
-也许它从未真正“开始”，只是某天醒来，所有人都发现自己需要输液了。官方说这是“维稳剂”，能维持社会运转；医生说这是“共生机”，帮助人类适应新环境。没人质疑——质疑的人，第二天就消失了。
+也许它从未真正“开始”，只是某天醒来，所有人都发现自己需要输液了。公告说这是“维稳剂”，能维持社会运转；医生说这是“共生机”，帮助人类适应新环境。没人质疑——质疑的人，第二天就消失了。
 
 我也挂上了输液瓶。
 
@@ -154,8 +154,8 @@ date: 2025-11-05T22:55:00+08:00
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-02">断裂的AI“智能”</a>
+<a href="../2025-11-02">【观点】断裂的AI“智能”</a>
 <a href="../">目录</a>
-<a href="../2025-11-06">办公室坍塌</a>
+<a href="../2025-11-06">【小说】办公室坍塌</a>
 </nav>
 
