--- a/content/decode-the-world/2025-11-06.md
+++ b/content/decode-the-world/2025-11-06.md
@@ -1,5 +1,5 @@
 ---
-title: "办公室坍塌"
+title: "【小说】办公室坍塌"
 summary: ""
 date: 2025-11-06T17:14:00+08:00
 ---
@@ -44,8 +44,8 @@ date: 2025-11-06T17:14:00+08:00
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-05">输液伞</a>
+<a href="../2025-11-05">【小说】输液伞</a>
 <a href="../">目录</a>
-<a href="../2025-11-08">修复</a>
+<a href="../2025-11-08">【小说】修复</a>
 </nav>
 
