--- a/content/decode-the-world/2025-11-08.md
+++ b/content/decode-the-world/2025-11-08.md
@@ -1,5 +1,5 @@
 ---
-title: "修复"
+title: "【小说】修复"
 summary: ""
 date: 2025-11-08T23:28:00+08:00
 ---
@@ -20,7 +20,7 @@ date: 2025-11-08T23:28:00+08:00
 
 她点头，声音平稳：“主人喝醉了。女主人离开后，他每天如此。”  
 
-我揭开她的上衣。左乳上有三个烟头烫痕，边缘碳化，新材料正在缓慢再生；小腹有淤青状压痕，向下延伸至骨盆——那是拳击的轨迹。还好，不会出血，不会有生命危险。法律上，这不算伤害。毕竟，机器人没有“生命权”，只是属于某人的“财产”。打坏了还有可能索赔，机器人会“疼”？不存在的。  
+我揭开她的上衣。左乳上有三个烟头烫痕，边缘碳化，新材料正在缓慢再生；小腹有淤青状压痕，向下延伸至骨盆——那是拳击的轨迹。还好，不会出血，不会有生命危险。协议规定，这不算伤害。毕竟，机器人没有“生命权”，只是属于某人的“财产”。打坏了还有可能索赔，机器人会“疼”？不存在的。  
 
 “下次你可以躲开的，”我说，“你的反应速度是人类的七倍，肯定能躲开。”
 
@@ -66,8 +66,8 @@ date: 2025-11-08T23:28:00+08:00
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-06">办公室坍塌</a>
+<a href="../2025-11-06">【小说】办公室坍塌</a>
 <a href="../">目录</a>
-<a href="../2025-11-09">AI不是替代人类，而是延伸思维</a>
+<a href="../2025-11-09">【观点】AI不是替代人类，而是延伸思维</a>
 </nav>
 
