--- a/content/decode-the-world/2025-11-09.md
+++ b/content/decode-the-world/2025-11-09.md
@@ -1,5 +1,5 @@
 ---
-title: "AI不是替代人类，而是延伸思维"
+title: "【观点】AI不是替代人类，而是延伸思维"
 summary: ""
 date: 2025-11-09
 ---
@@ -35,8 +35,8 @@ AI不会取代你，但会放大那些懂得如何与不确定性共舞的人。
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-08">修复</a>
+<a href="../2025-11-08">【小说】修复</a>
 <a href="../">目录</a>
-<a href="../2025-11-10">鸦船</a>
+<a href="../2025-11-10">【小说】鸦船</a>
 </nav>
 
