--- a/content/decode-the-world/2025-11-10.md
+++ b/content/decode-the-world/2025-11-10.md
@@ -1,5 +1,5 @@
 ---
-title: "鸦船"
+title: "【小说】鸦船"
 summary: ""
 date: 2025-11-10
 ---
@@ -52,8 +52,8 @@ date: 2025-11-10
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-09">AI不是替代人类，而是延伸思维</a>
+<a href="../2025-11-09">【观点】AI不是替代人类，而是延伸思维</a>
 <a href="../">目录</a>
-<a href="../2025-11-15">窝与翼</a>
+<a href="../2025-11-15">【小说】窝与翼</a>
 </nav>
 
