--- a/content/decode-the-world/2025-11-17.md
+++ b/content/decode-the-world/2025-11-17.md
@@ -1,5 +1,5 @@
 ---
-title: "无处排水"
+title: "【小说】无处排水"
 summary: ""
 date: 2025-11-17
 ---
@@ -97,8 +97,8 @@ date: 2025-11-17
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-15">窝与翼</a>
+<a href="../2025-11-15">【小说】窝与翼</a>
 <a href="../">目录</a>
-<a href="../2025-11-18">它不想被打开</a>
+<a href="../2025-11-18">【小说】它不想被打开</a>
 </nav>
 
