--- a/content/decode-the-world/2025-11-19.md
+++ b/content/decode-the-world/2025-11-19.md
@@ -1,5 +1,5 @@
 ---
-title: "起初我没在意"
+title: "【小说】起初我没在意"
 summary: ""
 date: 2025-11-19
 ---
@@ -114,9 +114,11 @@ README 是纯文本，黑底白字，像一段遗留在终端里的指令：
 
 然后打开咖啡机，只放了一只杯子。  
 
-水烧开的声音响起时，我忽然明白：
+机器运转起来，我却听见水烧开的声音——
 
-她不是突然消失的。
+那是我们从前每天早晨都有的声音，其实来自厨房的热水壶，可今天，它竟从这台沉默的机器里冒了出来。
+
+我忽然明白：她不是突然消失的。
 
 她是慢慢把自己删除的——而我，全程点了“允许”。
 
@@ -126,8 +128,8 @@ README 是纯文本，黑底白字，像一段遗留在终端里的指令：
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-18">它不想被打开</a>
+<a href="../2025-11-18">【小说】它不想被打开</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-11-25">【小说】刷题的女孩</a>
 </nav>
 
