--- a/content/decode-the-world/2025-11-01.md
+++ b/content/decode-the-world/2025-11-01.md
@@ -1,5 +1,5 @@
 ---
-title: "秦制之殇"
+title: "【观点】秦制之殇"
 summary: ""
 date: 2025-11-01
 ---
@@ -134,6 +134,6 @@ date: 2025-11-01
 <nav class="pagination justify-content-between">
 <a href="../2025-09-30">A Love Letter to My Old Code</a>
 <a href="../">目录</a>
-<a href="../2025-11-02">断裂的AI“智能”</a>
+<a href="../2025-11-02">【观点】断裂的AI“智能”</a>
 </nav>
 
