--- a/content/decode-the-world/2025-11-15.md
+++ b/content/decode-the-world/2025-11-15.md
@@ -1,5 +1,5 @@
 ---
-title: "窝与翼"
+title: "【小说】窝与翼"
 summary: ""
 date: 2025-11-15
 ---
@@ -98,8 +98,8 @@ date: 2025-11-15
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-10">鸦船</a>
+<a href="../2025-11-10">【小说】鸦船</a>
 <a href="../">目录</a>
-<a href="../2025-11-17">无处排水</a>
+<a href="../2025-11-17">【小说】无处排水</a>
 </nav>
 
