--- a/content/decode-the-world/2025-11-18.md
+++ b/content/decode-the-world/2025-11-18.md
@@ -1,5 +1,5 @@
 ---
-title: "它不想被打开"
+title: "【小说】它不想被打开"
 summary: ""
 date: 2025-11-18
 ---
@@ -94,8 +94,8 @@ date: 2025-11-18
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-17">无处排水</a>
+<a href="../2025-11-17">【小说】无处排水</a>
 <a href="../">目录</a>
-<a href="../2025-11-19">起初我没在意</a>
+<a href="../2025-11-19">【小说】起初我没在意</a>
 </nav>
 
