update slp to chapter 3-5 with manual translation

--- a/content/speech-and-language-processing/ch2-07.md
+++ b/content/speech-and-language-processing/ch2-07.md
@@ -4,9 +4,17 @@ summary: ""
 date: 2025-10-14T21:24:00+08:00
 ---
 
-**句子切分**（sentence segmentation）是文本处理中的另一个重要步骤。将文本切分为句子时，最有用的线索是标点符号，例如句号、问号和感叹号。问号和感叹号作为句子边界标记的歧义性相对较小。而句号则更具歧义性。“.” 这个字符可能表示句子边界，也可能表示缩写，如 *Mr.* 或 *Inc.*。你刚刚读完的上一句话就展示了一个更复杂的歧义情况：*Inc.* 的最后一个句号同时承担了缩写标记和句子边界标记的双重功能。正因如此，句子切分和词语切分有时需要联合处理。
+**句子切分**（sentence segmentation）是文本处理中的另一个重要步骤。
+将文本切分为句子时，最有用的线索是标点符号，例如句号、问号和感叹号。
+问号和感叹号作为句子边界标记的歧义性相对较小。
+而句号则更具歧义性。
+“.” 这个字符可能表示句子边界，也可能表示缩写，如 *Mr.* 或 *Inc.*。
+你刚刚读完的上一句话就展示了一个更复杂的歧义情况：*Inc.* 的最后一个句号同时承担了缩写标记和句子边界标记的双重功能。
+正因如此，句子切分和词语切分有时需要联合处理。
 
-通常，句子切分方法首先会判断（基于规则或机器学习）一个句号是词语的一部分，还是句子边界的标记。使用缩写词典有助于判断该句号是否属于常见缩写的一部分；这些词典可以是人工构建的，也可以是通过机器学习获得的，最终的句子分割器同样可以采用类似方法构建。例如，在斯坦福 CoreNLP 工具包（Manning 等，2014）中，句子切分采用基于规则的方法，其结果由分词过程确定：当一个句末标点符号（句号、感叹号或问号）未被与其他字符组合成一个词符（例如作为缩写或数字的一部分）时，句子即结束，该标点后可选择性地跟随引号或括号。
+通常，句子切分方法首先会判断（基于规则或机器学习）一个句号是词语的一部分，还是句子边界的标记。
+使用缩写词典有助于判断该句号是否属于常见缩写的一部分；这些词典可以是人工构建的，也可以是通过机器学习获得的，最终的句子分割器同样可以采用类似方法构建。
+例如，在斯坦福 CoreNLP 工具包（Manning 等，2014）中，句子切分采用基于规则的方法，其结果由分词过程确定：当一个句末标点符号（句号、感叹号或问号）未被与其他字符组合成一个词符（例如作为缩写或数字的一部分）时，句子即结束，该标点后可选择性地跟随引号或括号。
 
 
 <nav class="pagination justify-content-between">
