--- a/content/speech-and-language-processing/ch3-02.md
+++ b/content/speech-and-language-processing/ch3-02.md
@@ -4,9 +4,14 @@ summary: ""
 date: 2025-07-20T09:56:38+08:00
 ---
 
-评估语言模型性能的最佳方法是将其嵌入到一个具体应用中，并测量该应用性能的提升程度。这种端到端的评估称为**外在评估**（extrinsic evaluation）。外在评估是唯一能够确定语言模型（或任何组件）的某项改进是否真正有助于当前任务的方法。因此，在评估作为语音识别或机器翻译等任务组成部分的n元语法（n-gram）语言模型时，可以通过分别使用两个候选语言模型运行语音识别器或机器翻译系统两次，比较哪种模型产生的转录更准确，从而进行评估。
+评估语言模型性能的最佳方法是将其嵌入到一个具体应用中，并测量该应用性能的提升程度。
+这种端到端的评估称为**外在评估**（extrinsic evaluation）。
+外在评估是唯一能够确定语言模型（或任何组件）的某项改进是否真正有助于当前任务的方法。
+因此，在评估作为语音识别或机器翻译等任务组成部分的n元语法（n-gram）语言模型时，可以通过分别使用两个候选语言模型运行语音识别器或机器翻译系统两次，比较哪种模型产生的转录更准确，从而进行评估。
 
-然而，端到端地运行大型自然语言处理系统往往成本高昂。因此，我们需要一种能够快速评估语言模型潜在改进的指标。**内在评估**（intrinsic evaluation）是一种不依赖具体应用、直接衡量模型质量的方法。在下一节中，我们将介绍一种标准的内在评估指标——**困惑度**（perplexity），它被广泛用于衡量语言模型的性能，无论是简单的n元语法语言模型，还是第9章中更复杂的神经网络大语言模型。
+然而，端到端地运行大型自然语言处理系统往往成本高昂。因此，我们需要一种能够快速评估语言模型潜在改进的指标。
+**内在评估**（intrinsic evaluation）是一种不依赖具体应用、直接衡量模型质量的方法。
+在下一节中，我们将介绍一种标准的内在评估指标——**困惑度**（perplexity），它被广泛用于衡量语言模型的性能，无论是简单的n元语法语言模型，还是第9章中更复杂的神经网络大语言模型。
 
 评估任何机器学习模型，至少需要三个不同的数据集：**训练集**（training set）、**开发集**（development set，也称为验证集 validation set）和**测试集**（test set）。
 
