add novel the propety agent

--- a/content/decode-the-world/2025-11-25.md
+++ b/content/decode-the-world/2025-11-25.md
@@ -12,6 +12,6 @@ date: 2025-11-25
 <nav class="pagination justify-content-between">
 <a href="../2025-11-19">【小说】起初我没在意</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-11-26">【小说】接站义务</a>
 </nav>
 
