3 more novels for Dec

--- a/content/decode-the-world/2025-11-26.md
+++ b/content/decode-the-world/2025-11-26.md
@@ -36,6 +36,6 @@ date: 2025-11-26
 <nav class="pagination justify-content-between">
 <a href="../2025-11-25">【小说】刷题的女孩</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-12-11">【小说】卖房</a>
 </nav>
 
