refactor title for perplexity

--- a/content/engineering-wisdom/2025-12-11.md
+++ b/content/engineering-wisdom/2025-12-11.md
@@ -1,5 +1,5 @@
 ---
-title: "为什么困惑度要用 N 次方根？——《Speech and Language Processing》第三章阅读笔记"
+title: "为什么困惑度要用 N 次方根？"
 summary: ""
 date: 2025-12-11T15:47:05+08:00
 ---
