--- a/content/engineering-wisdom/2025-12-15.md
+++ b/content/engineering-wisdom/2025-12-15.md
@@ -138,7 +138,7 @@ $$
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-12-11">为什么困惑度要用 N 次方根？——《Speech and Language Processing》第三章阅读笔记</a>
+<a href="../2025-12-11">为什么困惑度要用 N 次方根？</a>
 <a href="../">目录</a>
 <span></span>
 </nav>
