add new article

--- a/content/decode-the-world/2025-12-15.md
+++ b/content/decode-the-world/2025-12-15.md
@@ -30,6 +30,6 @@ date: 2025-12-15T17:13:16+08:00
 <nav class="pagination justify-content-between">
 <a href="../2025-12-13">【小说】追杀</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-12-16">【悼文】拒绝</a>
 </nav>
 
