articles from decode the world

--- a/content/engineering-wisdom/2025-11-08.md
+++ b/content/engineering-wisdom/2025-11-08.md
@@ -189,8 +189,8 @@ markdown = change_image_url(markdown, rename_callback)
 
 
 <nav class="pagination justify-content-between">
-<span></span>
+<a href="../2025-11-02">断裂的AI“智能”</a>
 <a href="../">目录</a>
-<a href="../2025-12-11">为什么困惑度要用 N 次方根？</a>
+<a href="../2025-11-09">AI不是替代人类，而是延伸思维</a>
 </nav>
 
