--- a/content/engineering-wisdom/2025-12-15.md
+++ b/content/engineering-wisdom/2025-12-15.md
@@ -61,7 +61,7 @@ $$
 $$
 \begin{aligned}
 P(X = 0) &= P((T,T)) \\
-&= P(T) cdot T(T) \\
+&= P(T) \cdot P(T) \\
 &= \frac{1}{2} \times \frac{1}{2} \\
 &= \frac{1}{4}
 \end{aligned}
