relocate articles to engineering wisdom

--- a/content/decode-the-world/2025-11-01.md
+++ b/content/decode-the-world/2025-11-01.md
@@ -132,8 +132,8 @@ date: 2025-11-01
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-09-30">A Love Letter to My Old Code</a>
+<span></span>
 <a href="../">目录</a>
-<a href="../2025-11-02">【观点】断裂的AI“智能”</a>
+<a href="../2025-11-05">【小说】输液伞</a>
 </nav>
 
