--- a/content/decode-the-world/2025-11-05.md
+++ b/content/decode-the-world/2025-11-05.md
@@ -154,7 +154,7 @@ date: 2025-11-05T22:55:00+08:00
 
 
 <nav class="pagination justify-content-between">
-<a href="../2025-11-02">【观点】断裂的AI“智能”</a>
+<a href="../2025-11-01">【观点】秦制之殇</a>
 <a href="../">目录</a>
 <a href="../2025-11-06">【小说】办公室坍塌</a>
 </nav>
