--- a/content/decode-the-world/2025-11-08.md
+++ b/content/decode-the-world/2025-11-08.md
@@ -68,6 +68,6 @@ date: 2025-11-08T23:28:00+08:00
 <nav class="pagination justify-content-between">
 <a href="../2025-11-06">【小说】办公室坍塌</a>
 <a href="../">目录</a>
-<a href="../2025-11-09">【观点】AI不是替代人类，而是延伸思维</a>
+<a href="../2025-11-10">【小说】鸦船</a>
 </nav>
 
